--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
+html, body, body > main {
+  height: 100%;
+  width: 100%;
+  color: white;
+  background: black;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+body > main > * {
+  display: block;
+  position: absolute;
+  inset: 0;
 }
